// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BalancesTableControls Component disables buttons when columnCount reaches limits 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap items-center justify-center gap-4 mb-6"
  >
    <input
      class="w-64 px-4 py-2 border border-gray-300 rounded-md bg-white text-gray-700 placeholder-gray-500 shadow-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition disabled:bg-gray-100 disabled:cursor-not-allowed disabled:hover:bg-gray-100"
      placeholder="Search"
      value=""
    />
    <div
      class="flex gap-4"
    >
      <button
        class="px-5 py-2.5 text-sm bg-blue-600 text-white rounded-md hover:bg-blue-700 transition flex items-center gap-2 disabled:bg-gray-400 disabled:cursor-not-allowed disabled:hover:bg-gray-400"
        disabled=""
      >
        + Increase
      </button>
      <button
        class="px-5 py-2.5 text-sm bg-red-600 text-white rounded-md hover:bg-red-700 transition flex items-center gap-2 disabled:bg-gray-400 disabled:cursor-not-allowed disabled:hover:bg-gray-400"
      >
        - Reduce
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BalancesTableControls Component disables input and buttons when error exists 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap items-center justify-center gap-4 mb-6"
  >
    <input
      class="w-64 px-4 py-2 border border-gray-300 rounded-md bg-white text-gray-700 placeholder-gray-500 shadow-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition disabled:bg-gray-100 disabled:cursor-not-allowed disabled:hover:bg-gray-100"
      disabled=""
      placeholder="Search"
      value=""
    />
    <div
      class="flex gap-4"
    >
      <button
        class="px-5 py-2.5 text-sm bg-blue-600 text-white rounded-md hover:bg-blue-700 transition flex items-center gap-2 disabled:bg-gray-400 disabled:cursor-not-allowed disabled:hover:bg-gray-400"
        disabled=""
      >
        + Increase
      </button>
      <button
        class="px-5 py-2.5 text-sm bg-red-600 text-white rounded-md hover:bg-red-700 transition flex items-center gap-2 disabled:bg-gray-400 disabled:cursor-not-allowed disabled:hover:bg-gray-400"
        disabled=""
      >
        - Reduce
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BalancesTableControls Component renders input and buttons 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap items-center justify-center gap-4 mb-6"
  >
    <input
      class="w-64 px-4 py-2 border border-gray-300 rounded-md bg-white text-gray-700 placeholder-gray-500 shadow-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition disabled:bg-gray-100 disabled:cursor-not-allowed disabled:hover:bg-gray-100"
      placeholder="Search"
      value=""
    />
    <div
      class="flex gap-4"
    >
      <button
        class="px-5 py-2.5 text-sm bg-blue-600 text-white rounded-md hover:bg-blue-700 transition flex items-center gap-2 disabled:bg-gray-400 disabled:cursor-not-allowed disabled:hover:bg-gray-400"
      >
        + Increase
      </button>
      <button
        class="px-5 py-2.5 text-sm bg-red-600 text-white rounded-md hover:bg-red-700 transition flex items-center gap-2 disabled:bg-gray-400 disabled:cursor-not-allowed disabled:hover:bg-gray-400"
      >
        - Reduce
      </button>
    </div>
  </div>
</DocumentFragment>
`;
